[package]
name = "chargrid-roguelike-tutorial-2020"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
chargrid_graphical = "0.2"
chargrid = "0.1"
coord_2d = "0.2"
grid_2d = "0.14"
rgb24 = "0.2"
direction = "0.17"
entity_table = "0.2"
spatial_table = "0.2"
rand = "0.7"
rand_isaac = "0.2"
