[package]
name = "chargrid-roguelike-tutorial-2020"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
chargrid_graphical = "0.7"
chargrid = "0.4"
coord_2d = "0.3"
grid_2d = "0.15"
rgb24 = "0.3"
direction = { version = "0.18", features = ["rand"] }
entity_table = "0.2"
spatial_table = "0.3"
rand = "0.8"
rand_isaac = "0.3"
shadowcast = "0.8"
meap = "0.4"
grid_search_cardinal = "0.3"
line_2d = "0.5"
