[package]
name = "chargrid-roguelike-tutorial-2020"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
chargrid_graphical = "0.7"
chargrid = { version = "0.4", features = ["serialize"] }
coord_2d = { version = "0.3", features = ["serialize"] }
grid_2d = { version = "0.15", features = ["serialize"] }
rgb24 = { version = "0.3", features = ["serialize"] }
direction = { version = "0.18", features = ["rand", "serialize"] }
entity_table = { version = "0.2", features = ["serialize"] }
spatial_table = { version = "0.3", features = ["serialize"] }
rand = "0.8"
rand_isaac = { version = "0.3", features = ["serde1"] }
shadowcast = { version = "0.8", features = ["serialize"] }
meap = "0.4"
grid_search_cardinal = { version = "0.3", features = ["serialize"] }
line_2d = { version = "0.5", features = ["serialize"] }
serde = { version = "1.0", features = ["serde_derive"] }
maplit = "1.0"
general_storage_file = { version = "0.1", features = ["json", "compress"] }
